# tiralabra

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  build_wasm.sh  devenv.nix  devenv.yaml  rules.json
.github/workflows/: coverage.yml  rust.yml
benches/: evaluation.rs  propagation.rs
documentation/: implementation.md  requirements.md  testing.md  usage.md
documentation/weekly_reports/: week1.md  week2.md  week3.md  week4.md  week5.md  week6.md
frontend/: .dockerignore  index.html  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
frontend/public/docs/: index.html
frontend/src/: App.module.css  App.tsx  Extractor.tsx  Map.module.css  Map.tsx  RulesetDebug.tsx  Solver.tsx  index.css  utils.ts  worker.ts
samples/rules/: edge.json  flowers.json  link.json  simple_wall.json  skyline2.json  village.json  water.json
src/: entropy.rs  grid.rs  interface.rs  lib.rs  main.rs  rules.rs  space.rs  tile.rs  wasm.rs
src/backtracking/: gradual_reset.rs  mod.rs  reset.rs  undo.rs
src/grid/: constant_2d.rs  dynamic_1d.rs  dynamic_2d.rs  mod.rs  tests.rs
src/interface/: mod.rs  wasm.rs
src/tile/: interface.rs  mod.rs  simple.rs
src/tile_extraction/: helpers.rs  mod.rs  overlapping.rs  overlapping_bitmap.rs  overlapping_text.rs
src/utils/: entropy.rs  mod.rs  render.rs  space.rs
src/utils/space/: mod.rs  s1d.rs  s2d.rs  s3d.rs
src/wave_function_collapse/: e2e_tests.rs  interface.rs  mod.rs
