[package]
name = "aaltofunktionromautus"
version = "0.1.0"
edition = "2024"

[package.metadata]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "propagation"
harness = false

[dependencies]
getrandom = { version = "0.3", features = ["wasm_js"] }
rand = "0.9.0"
thiserror = "2.0.12"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.7", optional = true }
wasm-bindgen = "0.2.100"
serde-wasm-bindgen = "0.6.5"
serde = { version = "1.0.219", features = ["derive"] }
tsify-next = { version = "0.5.5", features = ["js"] }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
